<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uns</groupId>
    <artifactId>location</artifactId>
    <version>1</version>

    <dependencies>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.16.1</version>
		</dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.16.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
        </dependency>


		
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId> 
			<version>5.10.1</version> <!-- il y a 5.9.1, mais pas encore pour mockito -->
			<scope>test</scope>
		</dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>
		
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>5.8.0</version>
			<scope>test</scope>
		</dependency>

    </dependencies>


    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>

        <plugins>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>dico.ListAnagram</mainClass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>
                        -Xshare:off
                        -XX:+EnableDynamicAgentLoading
                    </argLine>
                </configuration>
            </plugin>

            <!-- la génération de la javadoc s'utilise avec "mvn site".-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>

                <configuration>
                    <show>package</show>
                    <nohelp>true</nohelp>
                    <encoding>utf-8</encoding> <!-- éventuellement à changer : encodage de vos fichiers -->
                    <charset>utf-8</charset> <!-- éventuellement à changer : encodage de vos fichiers -->
                    <docencoding>utf-8</docencoding>
                </configuration>

                <executions>
                    <execution>
                        <id>javadoc</id>
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                        <phase>site</phase>
                        <configuration>
                            <!-- endroit où seront les fichiers html générés ! attention au .gitignore ! -->
                            <!-- ici, c'est dans target/main/apidocs -->
                            <outputDirectory>${basedir}/target/main/</outputDirectory>
                            <reportOutputDirectory>${basedir}/target/main/</reportOutputDirectory>
                        </configuration>
                    </execution>

                    <execution>
                        <id>test-javadoc</id>
                        <goals>
                            <goal>test-javadoc</goal>
                        </goals>
                        <phase>site</phase>
                        <configuration>
                            <!-- endroit où seront les fichiers html générés ! attention au .gitignore ! -->
                            <!-- ici, c'est dans target/test/apidocs -->
                            <outputDirectory>${basedir}/target/test/</outputDirectory>
                            <reportOutputDirectory>${basedir}/target/test/</reportOutputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>


        </plugins>
    </build>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>
